--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <p> templates/index.html</p>
-    <p> I will be the homepage</p>
+    <p> I will be the homepage 20190630</p>
   </body>
 </html>
