--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
 
       <footer>
         <hr />
-        <p>Blog, &copy; 2015</p>
+        <p>Shiqiu's blog, &copy; 2019</p>
       </footer>
     </div>
   </body>
