--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,9 @@
-<HTML>
-<BODY bgcolor='cyan'>
-<form method='POST' action=''>
-    <center>
-    <H1>Enter your details </H1><br>
-    First Name <input type = 'text' name = 'fname' /><br>
-    Last Name <input type = 'text' name = 'lname' /><br>
-    <input type = 'submit'>
-    </center>
-</form>
-</BODY>
-</HTML>
+<html>
+   <body>
+      <form action = "/result" method = "POST">
+         <p>Word <input type = "text" name = "word" /></p>
+         <p>Meaning <input type = "text" name = "meaning" /></p>
+         <p><input type = "submit" value = "submit" /></p>
+      </form>
+   </body>
+</html>
