--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
    <body>
-      <form action = "/result" method = "POST">
+      <form action = "{{ url_for('result') }}" method = "POST">
          <p>Word <input type = "text" name = "word" /></p>
          <p>Meaning <input type = "text" name = "meaning" /></p>
          <p><input type = "submit" value = "submit" /></p>
