--- a/templates/testpage.html
+++ b/templates/testpage.html
@@ -1,4 +1,8 @@
 <html>
+   <head>
+    <meta charset="UTF-8">
+    <title>testpage.html</title>
+   </head>
    <body>
       <p>testpage</p>
       <form action = "{{ url_for('test') }}" method = "POST">
