--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,17 +1,15 @@
-{% from 'bootstrap/form.html' import render_form%}
+{% from 'bootstrap/form.html' import render_form %}
 {% from 'bootstrap/nav.html' import render_nav_item %}
-
-
 
 {% block styles %}
 <!-- Bootstrap CSS -->
 {{ bootstrap.load_css() }}
 {% endblock %}
-
 {% block scripts %}
 <!-- Optional JavaScript -->
 {{ bootstrap.load_js() }}
 {% endblock %}
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="navbar-nav mr-auto">
         {{ render_nav_item('home', 'Home') }}
@@ -22,13 +20,19 @@
     </div>
 </nav>
 
+<title>edit</title>
 
 {% block content %}
-<form method="post">
-    <div class="form-group">
-        <div class="col-sm-10">
-            {{ render_form(contactform) }}
+    <form method="post">
+        <div class="form-group">
+            <div class="col-sm-10">
+                {{ render_form(wordedit_form) }}    {# 什么神仙代码 一键生成form form是forms.py里的ContactForm() #}
+            </div>
         </div>
-    </div>
-</form>
+    </form>
+    <br>
 {% endblock %}
+
+
+  </body>
+</html>
