--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,17 +1,16 @@
-{% from 'bootstrap/form.html' import render_form%}
+
+
 {% from 'bootstrap/nav.html' import render_nav_item %}
-
-
 
 {% block styles %}
 <!-- Bootstrap CSS -->
 {{ bootstrap.load_css() }}
 {% endblock %}
-
 {% block scripts %}
 <!-- Optional JavaScript -->
 {{ bootstrap.load_js() }}
 {% endblock %}
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="navbar-nav mr-auto">
         {{ render_nav_item('home', 'Home') }}
@@ -22,13 +21,7 @@
     </div>
 </nav>
 
-
 {% block content %}
-<form method="post">
-    <div class="form-group">
-        <div class="col-sm-10">
-            {{ render_form(contactform) }}
-        </div>
-    </div>
-</form>
+<h1>以后再慢慢写</h1>
+<p>更新。。。</p>
 {% endblock %}
