mybootstrap to bootstrap

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,11 +4,11 @@
 
 {% block styles %}
 <!-- Bootstrap CSS -->
-{{ mybootstrap.load_css() }}
+{{ bootstrap.load_css() }}
 {% endblock %}
 {% block scripts %}
 <!-- Optional JavaScript -->
-{{ mybootstrap.load_js() }}
+{{ bootstrap.load_js() }}
 {% endblock %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
