homepage add link

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -23,5 +23,5 @@
 
 {% block content %}
 <h1>以后再慢慢写</h1>
-<p>更新。。。</p>
+<p><a href="https://github.com/Shiqiu2019/wedict/wiki/Tousers">使用前一定要看(点击这个链接)，网站有些问题会及时更新在github那个页面（MUST READ）</a></p>
 {% endblock %}
